# rust-ai-auditor

./: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  compose.yaml
migrations/: 20260113000001_create_ai_audits.sql  20260113000002_rename_audit_columns.sql
src/: auditor.rs  error.rs  main.rs  models.rs  schema.rs  services.rs
